# RIS_SIONNA

./: .gitignore  AGENTS.md  Makefile  PROJECT_CONTEXT.md  README.md  REPO_STATUS.md  package-lock.json  pyproject.toml  requirements-0.19.2.txt  ris_python_0.py  ris_python_1.py
.ralph/: progress.md
.streamlit/: config.toml
app/: campaign.py  cli.py  config.py  dashboard_app.py  io.py  link_level.py  metrics.py  plots.py  radio_map_grid.py  scene.py  scene_file_manifest.py  sim_jobs.py  sim_server.py  sim_tuning.py  simulate.py  viewer.py  web_assets.py
configs/: ashby.yaml  ashby_ris_link.yaml  benchmark_gpu.yaml  blank_los.yaml  cc_ashby_improved.yaml  cc_ashby_mds.yaml  cc_high_fidelity.yaml  cc_indoor_quick.yaml  cc_wideband_mimo.yaml  default.yaml  high.yaml  indoor_box_high.yaml  indoor_box_ieee_tap_chamber.yaml  preview.yaml  procedural.yaml  ris_doc_street_canyon.yaml  ris_lab_example.yaml  ris_preview.yaml  ris_rt_demo.yaml  ris_rt_similarity_100.yaml  ris_spread_10deg.yaml  ris_synthesis_street_canyon.yaml  south_belfast.yaml
docs/: CHANNEL_CHARTING.md  INDOOR_CAMPAIGN.md  RIS_MULTI_RIS_DEBUG.md  RIS_SYNTHESIS_OPTIMIZATION.md  RIS_SYNTHESIS_PLAN.md  RT_BACKEND_AUDIT.md  SIMULATOR_SUMMARY.md  STATUS.md  TROUBLESHOOTING.md  trace_viewer.json
ris_sionna.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: demo_ris_in_scene.py
tests/: test_alignment.py  test_campaign.py  test_cli.py  test_io.py  test_link_level.py  test_metrics.py  test_plots.py  test_radio_map_grid.py  test_ris_config.py  test_ris_core.py  test_ris_geometry.py  test_ris_lab_pattern.py  test_ris_lab_reference.py  test_ris_lab_validation.py  test_ris_rt_pipeline.py  test_ris_sionna_defaults.py  test_ris_sionna_integration.py  test_ris_smoke.py  test_ris_synthesis_artifacts.py  test_ris_synthesis_binarize.py  test_ris_synthesis_config.py  test_ris_synthesis_jobs.py  test_scene_export.py  (+17 more)
(+253 files in other folders)
